# pitchfork

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRUSH.md  Cargo.toml  Cross.toml  README.md  build.rs  communique.toml  config.toml  hk.pkl  mise.toml  pitchfork-extras.usage.kdl  pitchfork.toml  pitchfork.usage.kdl  release-plz.toml  settings.toml  test.sh
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: auto-merge-release.yml  autofix.yml  ci.yml  docs.yml  link-discussion.yml  release-plz.yml  release.yml  windows-ci.yml  zizmor.yml
.mise/tasks/: gen-release-notes
docs/: api.data.ts  architecture.md  aube-lock.yaml  boot-start.md  bun.lockb  config.data.ts  config.md  cron.md  first-daemon.md  getting-started.md  index.md  installation.md  mise.md  package.json  quickstart.md  ready-checks.md  retry.md  settings.data.ts  troubleshooting.md
docs/.vitepress/: config.mts  stars.data.ts
docs/.vitepress/theme/: EndevSponsors.vue  custom.css  index.ts
docs/cli/: activate.md  add.md  boot.md  clean.md  commands.json  completion.md  config.md  daemon.md  daemons.md  disable.md  enable.md  index.md  list.md  logs.md  mcp.md  project.md  proxy.md  remove.md  restart.md  run.md  settings.md  sponsors.md  start.md  status.md  stop.md  supervisor.md  tui.md  usage.md  wait.md
docs/cli/boot/: disable.md  enable.md  status.md
docs/cli/config/: add.md  remove.md
docs/cli/daemon/: run.md  start.md  status.md  stop.md
docs/cli/daemons/: add.md  remove.md
docs/cli/project/: enter.md  leave.md  list.md
docs/cli/proxy/: add.md  remove.md  status.md  trust.md
docs/cli/settings/: get.md  list.md  set.md
docs/cli/supervisor/: run.md  start.md  status.md  stop.md
docs/components/: ConfigTable.vue  SettingsTable.vue
docs/concepts/: architecture.md  how-it-works.md  namespaces.md
docs/guides/: auto-restart.md  boot-start.md  configuration-templates.md  container-mode.md  file-watching.md  hooks.md  lifecycle-hooks.md  logs.md  mcp.md  mise-integration.md  port-management.md  ready-checks.md  scheduling.md  shell-hook.md  structured-log-performance.md  tui.md  web-ui.md
docs/public/: api-schema.json  schema.json
docs/reference/: configuration.md  environment-vars.md  file-locations.md  settings.md
scripts/: gen-release-notes.sh  gen-release-summary.sh
src/: async_watcher.rs  boot_manager.rs  config_types.rs  daemon.rs  daemon_id.rs  daemon_list.rs  daemon_status.rs  deps.rs  env.rs  error.rs  lib.rs  log_jq.rs  log_parse.rs  logger.rs  main.rs  pid_file.rs  pitchfork_toml.rs  procs.rs  settings.rs  shell.rs  state_file.rs  supervisor.rs  template.rs  watch_files.rs
src/cli/: activate.rs  add.rs  api_schema.rs  boot.rs  cd.rs  clean.rs  completion.rs  daemon.rs  disable.rs  enable.rs  json_output.rs  list.rs  logs.rs  mcp.rs  mod.rs  project.rs  proxy.rs  remove.rs  restart.rs  run.rs  schema.rs  settings.rs  sponsors.rs  start.rs  status.rs  stop.rs  tui.rs  usage.rs  wait.rs
src/cli/config/: add.rs  mod.rs  remove.rs
src/cli/daemon/: mod.rs  run.rs  start.rs  status.rs  stop.rs
src/ipc/: batch.rs  client.rs  mod.rs  server.rs
src/log_store/: mod.rs  sqlite.rs
src/proxy/: lan_ip.rs  mod.rs  server.rs  trust.rs  worktree.rs
src/supervisor/: adopt.rs  autostop.rs  hooks.rs  ipc_handlers.rs  lifecycle.rs  mod.rs  retry.rs  state.rs  watchers.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/ui/: mod.rs  style.rs  table.rs
src/web/: helpers.rs  mod.rs  server.rs  static_files.rs
test/: autostop.bats  basic.bats  config.bats  config_fields.bats  config_merge.bats  cron.bats  depends.bats  e2e.bats  errors.bats  hooks.bats  interval.bats  log_store.bats  logs.bats  migration.bats  namespace.bats  port.bats  project.bats  proxy.bats  pty.bats  run_all_tests  settings.bats  state.bats  structured_logs.bats  supervisor.bats  watch.bats
test/scripts/: ansi_output.sh  eat_memory.sh  fail.sh  http_server.py  slowly_output.sh  success_on_third.sh
test/test_helper/: common_setup.bash
tests/: README.md  fail.ts  test_e2e.rs  test_e2e_autostop.rs  test_e2e_config.rs  test_e2e_cron.rs  test_e2e_depends.rs  test_e2e_dir.rs  test_e2e_hooks.rs  test_e2e_interval.rs  test_e2e_logs.rs  test_e2e_migration.rs  test_e2e_namespace.rs  test_e2e_port.rs  test_e2e_proxy.rs  test_e2e_pty.rs  test_e2e_watch.rs  test_gates.rs  test_hooks.rs  test_pitchfork_toml.rs
tests/common/: mod.rs
tests/scripts/: eat_memory.ts  http_server.ts  slowly_output.ts  success_on_third.ts
ui/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.vue  env.d.ts  main.ts
ui/src/types/: api.ts
ui/tests/: web-ui-smoke.spec.ts
(+43 files in other folders)
