[package]
name = "pitchfork-cli"
description = "Daemons with DX"
license = "MIT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pitchfork"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.3"
console = "0.15"
dirs = "5"
duct = "0.13"
eyre = "0.6"
fork = "0.2.0"
indexmap = { version = "2", features = ["serde"] }
interprocess = { version = "2", features = ["tokio"] }
log = "0.4"
notify-debouncer-mini = "0.5.0"
once_cell = "1"
psutil = "3"
rmp-serde = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["indexmap"] }
strum = { version = "0.26", features = ["derive"] }
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8", features = ["indexmap", "preserve_order"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
xx = { version = "2", features = ["fslock", "hash"] }

[target.'cfg(unix)'.dependencies]
exec = "0.3"
