[package]
name = "pitchfork-cli"
description = "Daemons with DX"
license = "MIT"
version = "0.2.1"
edition = "2021"
homepage = "https://pitchfork.jdx.dev"
repository = "https://github.com/jdx/pitchfork"
documentation = "https://pitchfork.jdx.dev"
include = [
    "src/**/*.rs",
    "assets/**/*",
    "/pitchfork-extras.usage.kdl",
]

[[bin]]
name = "pitchfork"
path = "src/main.rs"

[lib]
name = "pitchfork_cli"
path = "src/lib.rs"

[dependencies]
auto-launcher = "0.6.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_usage = "2"
comfy-table = "7.1.3"
console = "0.16"
cron = "0.15"
dirs = "6"
duct = "0.13"
exponential-backoff = "2"
indexmap = { version = "2", features = ["serde"] }
interprocess = { version = "2", features = ["tokio"] }
itertools = "0.14"
log = {version="0.4", features=["serde"]}
miette = { version = "7", features = ["fancy"] }
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-full = "0.4"
once_cell = "1"
regex = "1"
rev_lines = "0.3"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["indexmap"] }
shell-words = "1.1.0"
strum = { version = "0.27", features = ["derive"] }
sysinfo = "0.37"
tokio = { version = "1", features = ["full"] }
toml = { version = "0.9", features = ["indexmap", "preserve_order"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
xx = { version = "2", features = ["fslock", "hash"] }


[target.'cfg(unix)'.dependencies]
exec = "0.3"

[dev-dependencies]
tempfile = "3"
