[package]
name = "pitchfork-cli"
description = "Daemons with DX"
license = "MIT"
version = "1.6.1"
edition = "2024"
homepage = "https://pitchfork.jdx.dev"
repository = "https://github.com/jdx/pitchfork"
documentation = "https://pitchfork.jdx.dev"
include = [
    "src/**/*.rs",
    "assets/**/*",
    "src/web/assets/**/*",
    "/pitchfork-extras.usage.kdl",
]

[[bin]]
name = "pitchfork"
path = "src/main.rs"

[lib]
name = "pitchfork_cli"
path = "src/lib.rs"

[dependencies]
auto-launcher = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_usage = "2"
comfy-table = "7.1.3"
console = "0.16"
cron = "0.15"
dirs = "6"
duct = "1.0"
exponential-backoff = "2"
indexmap = { version = "2", features = ["serde"] }
interprocess = { version = "2", features = ["tokio"] }
itertools = "0.14"
log = {version="0.4", features=["serde"]}
miette = { version = "7", features = ["fancy"] }
notify = { version = "8", features = ["macos_kqueue"] }
notify-debouncer-full = "0.6"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rev_lines = "0.3"
rust-embed = { version = "8", features = ["axum"] }
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-stream = "0.1"
async-stream = "0.3"
urlencoding = "2"
mime_guess = "2"
rmp-serde = "1"
schemars = { version = "1", features = ["indexmap2"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["indexmap"] }
shell-words = "1.1.0"
strum = { version = "0.27", features = ["derive"] }
sysinfo = "0.37"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = { version = "0.9", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
xx = { version = "2", features = ["fslock", "hash"] }
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3.7"
glob = "0.3"
globset = "0.4"
humantime = "2"

[target.'cfg(unix)'.dependencies]
exec = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
